// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VariableEditor > renders correctly with empty variables 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="false"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        New Variable
      </button>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="false"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        testVariable
      </button>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable with Token 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="false"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
        testVariable
      </button>
    </div>
  </div>
</div>
`;
